# ExtractionModule

./: README.md  pyproject.toml
docs/: Extraction.drawio  databricks_installation.md
script/: basic_usage.py
src/extraction/: extraction.py
src/extraction/data_handlers/: dataframe_mapper.py  excel_indexer.py  structured_class.py
src/extraction/entities/: extraction_entity.py  extraction_entity_validator.py
src/extraction/extractors/: structured_extractor.py
src/extraction/utils/: batcher.py  helper.py  jsons.py  loggings.py
src/extraction/validators/: structured_validator.py  structured_validator_base.py  structured_validator_quality.py  structured_validator_structure.py
tests/data_handlers/: conftest.py  test_dataframe_mapper.py  test_excel_indexer.py  test_structured_class.py
tests/entities/: test_extraction_entity.py  test_extraction_entity_validator.py
tests/utils/: conftest.py  test_batcher.py  test_helper.py  test_jsons.py
